--- a/src/App.css
+++ b/src/App.css
@@ -41,7 +41,7 @@
 
 .homepage {
   display: flex;
-  gap: 10px;
+  gap: 25px;
   margin: auto;
 }
 
@@ -422,3 +422,52 @@
   }
 
 }
+
+
+
+  /* Subscriptions */
+
+  .subscription{
+    /* padding-top: 50px; */
+    height: 550px;
+    background-color: #FAFAFA;
+    text-align: left;
+  }
+  .subscription h1{
+    margin-bottom: 50px;
+    margin-left: 80px;
+  }
+
+  .subscriptions{
+    width: 90%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: auto;
+  }
+
+  .subscriptions > div {
+    background-color: white;
+    border-radius: 9px;
+    border: 3px solid whitesmoke;
+    /* color: #23A6F0; */
+    width: 18%;
+    text-align: center;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+  }
+
+  .subscriptions > div img{
+    width: 100%;
+    border-radius: 8px;
+  }
+  .subscriptions > div button{
+    border-radius: 19px;
+  padding: 8px 25px 8px 25px;
+  border: 1px solid #23A6F0;
+  background-color: #23A6F0;
+  color: #FAFAFA;
+  margin-bottom: 10px;
+  /* margin-left: 80px; */
+  }
+
+
